--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5px;
 }
 
-img {
+.flexbox img {
   height: 50px;
 }
 
@@ -16,6 +17,7 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 5px;
 }
 
 button {
@@ -61,4 +63,26 @@ input {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+} 
+
+.fb a {
+  text-decoration: none;
+  color: #385185;
+  font-weight: bold;
+}
+
+.forgot a {
+  text-decoration: none;
+  color: #385185;
+  font-size: 15px;
+  
+}
+
+.visas a {
+  text-decoration: none;
+  color: #385185;
+}
+
+.nualio img {
+  height: 120px;
 }
